# ai-customer

./: .env.example  .gitignore  FLOW_ANALYSIS.md  PROCESS_CONFIG_COMM.md  README.md  app.py  cli_chat.py  config.py  crm.py  db.py  demo.py  harness.py  llm.py  mcp_client.py  media.py  prompts.py  pyproject.toml  rag.py  requirements.txt  service.py  store.py  tools.py
graph/: __init__.py  build.py  nodes.py  state.py
