[project]
name = "ai-customer"
version = "2.0.0"
description = "智能客服：意图分流 + Agent/双 Loop/Harness；MCP RAG 与 stub 工艺推荐"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.0",
    "streamlit>=1.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "mcp>=1.9.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "app",
    "cli_chat",
    "config",
    "crm",
    "db",
    "harness",
    "llm",
    "mcp_client",
    "prompts",
    "rag",
    "service",
    "store",
    "tools",
]

[tool.uv]
package = false
